--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,16 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.centerInRow {
+  display: flex;
+  flex-direction: row;
+}
+
+.flexGrow1 {
+  flex-grow: 1;
+}
+
+.flexGrow2 {
+  flex-grow: 2;
+}
